# gitzen

./: .copilot-instructions.md  .env.example  .gitignore  .gitleaks.toml  CI_CD.md  DEVELOPMENT.md  Makefile  PROJECT_DOCUMENTATION.md  README.md  REDESIGN_PLAN.md  docker-compose.yml  sonar-project.properties
.github/workflows/: ci.yml  secret-scan.yml
action/: README.md  action.yml
backend/: .env.example  DATABASE_SCHEMA.md  Dockerfile  GITZ-40_SUMMARY.md  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  test_api.sh
backend/alembic/: env.py
backend/alembic/versions/: 7a80fdf31643_add_email_password_auth_support.py  badd5f08127f_initial_schema_users_repositories_scans_.py
backend/app/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  main.py  middleware.py  schemas.py  security.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  base.py  false_positive.py  finding.py  repository.py  scan.py  user.py
backend/app/routers/: __init__.py  auth.py  findings.py  github.py  statistics.py
backend/app/utils/: __init__.py  auth.py
backend/scripts/: setup_postgres.sh
backend/tests/: conftest.py  test_main.py
docs/: AUTH_IMPLEMENTATION.md  README.md
docs/architecture/: dashboard-mockup.md
docs/guides/: GITHUB_ACTION.md  (+2 more)
frontend/: .env.example  .eslintrc.json  DESIGN_SYSTEM.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
schemas/: metadata-schema.json
scripts/: extract-metadata.sh  init-db.sql  post-pr-comment.js  test-exclusions.sh  test-gitleaks.sh  test-privacy.sh
(+37 files in other folders)
